--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,21 @@
 spring:
   application:
     name: smartshop
+
+  # database connection
+  datasource:
+    url: jdbc:postgresql://localhost:5432/smartshop
+    username: human
+    password: ahmed
+    driver-class-name: org.postgresql.Driver
+
+  # jpa / hibernate
+  jpa:
+    hibernate:
+      ddl-auto: none
+    show-sql: true
+
+  # Liquibase Configuration
+  liquibase:
+    change-log: classpath:/db/changelog/db.changelog-master.yaml
+    enabled: false
