--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,4 +18,4 @@ spring:
   # Liquibase Configuration
   liquibase:
     change-log: classpath:/db/changelog/db.changelog-master.yaml
-    enabled: false
+    enabled: true
