--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,5 @@
   databaseChangeLog:
     - include:
         file: db/changelog/2025/11/24-01-changelog-create-user-table.yaml
+    - include:
+        file: db/changelog/2025/11/24-01-changelog-create-clients-table.yaml
