SMR-3 : ajoute de Product entity - et changeset pour creation  products table

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@
         file: db/changelog/2025/11/24-01-changelog-create-user-table.yaml
     - include:
         file: db/changelog/2025/11/24-01-changelog-create-clients-table.yaml
+    - include:
+        file: db/changelog/2025/11/25-01-changelog-create-products-table.yaml
