SMR-3 : ajoute de Order entities (Order Payment OrderItem ) - et changeset pour creation

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -5,3 +5,5 @@
         file: db/changelog/2025/11/24-01-changelog-create-clients-table.yaml
     - include:
         file: db/changelog/2025/11/25-01-changelog-create-products-table.yaml
+    - include:
+        file: db/changelog/2025/11/25-01-changelog-create-order-tables.yaml
