SMR-13 - ajoute AuthController avec fonctions login logout - ajoute code liquibase pour inserer admin

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -7,3 +7,5 @@
         file: db/changelog/2025/11/25-01-changelog-create-products-table.yaml
     - include:
         file: db/changelog/2025/11/25-01-changelog-create-order-tables.yaml
+    - include:
+        file: db/changelog/2025/11/25-02-insert-default-admin.yaml
