--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,5 @@
         file: db/changelog/2025/11/25-02-insert-default-admin.yaml
     - include:
         file: db/changelog/2025/11/28-01-changelog-add-column-to-order_items-table.yaml
+    - include:
+        file: db/changelog/2025/12/06-02-changelog.yaml
